After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 599861 - [media-keys] Fix for GSEAL goal
[media-keys] Fix for GSEAL goal
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: plugins
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks: 594664
 
 
Reported: 2009-10-27 23:35 UTC by Bastien Nocera
Modified: 2009-11-06 18:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[media-keys] Fix for GSEAL goal (15.39 KB, patch)
2009-10-27 23:35 UTC, Bastien Nocera
accepted-commit_now Details | Review
Fix for GSEAL goal (13.89 KB, patch)
2009-10-28 00:28 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2009-10-27 23:35:07 UTC
SSIA, just the media-keys popup bits.
Comment 1 Bastien Nocera 2009-10-27 23:35:11 UTC
Created attachment 146386 [details] [review]
[media-keys] Fix for GSEAL goal
Comment 2 Jens Granseuer 2009-10-27 23:58:04 UTC
Review of attachment 146386 [details] [review]:

::: plugins/media-keys/gsd-media-keys-window.c
@@ +355,3 @@
               cairo_t            *cr,
+              double              _x0,
+              double              _y0,

What's the problem here?
Comment 3 Bastien Nocera 2009-10-28 00:17:16 UTC
Anal compiler:
gsd-media-keys-window.c:358: error: declaration of ‘y0’ shadows a global declaration
/usr/include/bits/mathcalls.h:241: error: shadowed declaration is here
Comment 4 Bastien Nocera 2009-10-28 00:28:28 UTC
Created attachment 146397 [details] [review]
Fix for GSEAL goal