[media-keys] Fix for GSEAL goal

https://bugzilla.gnome.org/show_bug.cgi?id=599861